feat: Capture Diff for uncommitted changes